--- a/src/pages/PokemonDetail/styles.css
+++ b/src/pages/PokemonDetail/styles.css
@@ -7,7 +7,6 @@
     padding: 16px;
     padding-bottom: 24px;
     background-color: var(--type-normal);
-    /* Fallback */
 }
 
 /* Background dynamics based on theme (Types or API Colors) */
@@ -87,7 +86,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 8px 4px;
+    padding: 10px 4px;
     color: white;
     z-index: 10;
 }
@@ -121,12 +120,27 @@
 
 .pokeball-bg-detail {
     position: absolute;
-    top: 8px;
-    right: -20px;
-    width: 220px;
-    height: 220px;
+    top: 10px;
+    /* center*/
+    left: 56%;
+    transform: translateX(-50%);
+    width: 240px;
+    height: 240px;
     z-index: 1;
     pointer-events: none;
+
+    @media (max-width: 768px) {
+        left: 66%;
+    }
+}
+
+.pokeball-icon {
+    width: 240px;
+    height: 240px;
+    opacity: 0.1;
+    object-fit: cover;
+
+
 }
 
 .detail-hero {
@@ -173,12 +187,15 @@
     background-color: white;
     border-radius: 8px;
     flex: 1;
-    margin-top: -40px;
-    padding: 56px 20px 24px 20px;
+    margin-top: 30px;
+    padding: 100px 20px 24px 20px;
     display: flex;
     flex-direction: column;
     gap: 24px;
     box-shadow: 0px -4px 10px rgba(0, 0, 0, 0.05);
+    /* shadow inner top */
+    box-shadow: inset 0px 4px 0px 0px rgba(0, 0, 0, 0.04);
+
     z-index: 2;
 }
 
@@ -186,7 +203,7 @@
     display: flex;
     gap: 16px;
     justify-content: center;
-    margin-top: -16px;
+    margin-top: 20px;
 }
 
 .section-title {
@@ -255,7 +272,7 @@
     line-height: 1.5;
     color: #1D1D1D;
     text-align: left;
-    margin-top: 16px;
+    margin-top: 10px;
 }
 
 /* Stats Section */
